refactor main workflow; cleaned files.
path generation and visualisation are separated.  removed un-used files.

--- a/Reeds_Shepp_curve/CMakeLists.txt
+++ b/Reeds_Shepp_curve/CMakeLists.txt
@@ -8,25 +8,16 @@ find_package(OpenCV REQUIRED)
 include_directories( ${OpenCV_INCLUDE_DIRS} )
 INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )
 
-add_library(utillib utils/img_io.cpp)
+# add_library(utillib utils/img_io.cpp)
 # add_library(dubins dubins.cpp)
 
-include_directories( reedsshepp_func )
+# include_directories( reedsshepp_func )
 
 add_executable(reedsshepp_path 
 main.cpp 
-reedsshepp.cpp
-reedsshepp_func/reedsshepp_print.cpp 
-reedsshepp_func/reedsshepp_compute.cpp 
-reedsshepp_func/reedsshepp_draw.cpp
 )
 
-
-# target_link_libraries(dubins_path dubins utillib ${OpenCV_LIBS} )
-
-
-
-target_link_libraries(reedsshepp_path utillib ${OpenCV_LIBS} )
+target_link_libraries(reedsshepp_path ${OpenCV_LIBS} )
 
 
 
